# ConstList

./: CMakeLists.txt  README.md  test.cc
src/: cons.h  list.h  make.h
src/detail/: cons.h  sfinae.h
src/detail/type/: query.h  sfinae.h  transformation.h
src/operation/: basic.h  concatenate.h  higher.h  specialized.h
src/operation/higher/: foldr.h  misc.h  query.h
